tests/compile-and-run/enum-variant-error-4.sdg
//% compile-error == 2

enum Foo = {
    V1,
    V2(Int),
    V3 { x1: Int, x2: String },
};

fn foo(f: Foo) = match f {
    Foo.V1 => 0,
    // Foo.V1() => 1,  // error, but not in scope of this test
    // Foo.V1(3) => 2,  // error, but not in scope of this test
    // Foo.V1 { x1: 3 } => 3,  // error, but not in scope of this test
    // Foo.V1 { x1: 3, x2: "" } => 4,  // error, but not in scope of this test
    // Foo.V2 => 5,  // error, but not in scope of this test
    Foo.V2() => 6,  // error
    Foo.V2(3) => 7,
    // Foo.V2 { x1: 3 } => 8,  // error, but not in scope of this test
    // Foo.V2 { x1: 3, x2: "" } => 9,  // error, but not in scope of this test
    // Foo.V3 => 10,  // error, but not in scope of this test
    // Foo.V3() => 11,  // error, but not in scope of this test
    // Foo.V3(3) => 12,  // error, but not in scope of this test
    Foo.V3 { x1: 3 } => 13,  // error
    Foo.V3 { x1: 3, x2: "" } => 14,
};
